p-front-page.css
/* 
 * Letter page size.
 */
@page {
    size: 8.5in 11in;
}

/* 
 * Front page title
 */
front-page-title{
    color:white;          
    font-size: 3em;    
    width: 80%;
    margin-left:auto;
    margin-right:auto;
}

/* 
 * Logo image in the left part of the title.
 */
front-page-title {
    background-image: url("images/author_cover_logo.png");
    background-repeat:no-repeat;
    background-position: 10% center;
    padding-left: 100px;    
    padding-top: 20px;
}

/* 
 * Background image for the cover page.
 */
@page front-page{
    background-image: url("images/author_cover_background.svg");
    background-size: 8.5in 11in;
    background-position: right bottom;
}

